--- a/client/package.json
+++ b/client/package.json
@@ -34,18 +34,11 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
+  "browserslist": [
       ">0.2%",
       "not dead",
       "not op_mini all"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
