--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^6.0.8",
     "multer": "^1.4.3",
     "passport": "^0.5.0",
