--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,9 @@
     "multer": "^1.4.3",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "razorpay": "^2.0.7",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
